--- a/tienda.html
+++ b/tienda.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tecnova | tienda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
 <body>
     <header id="header">
-        <a href="index.html"><img src="" alt="">g</a>
+        <img src="imagen/logo2.png" alt="logo tienda">
 
         <nav id="navbar-lincks">
             <ul>
@@ -20,9 +20,9 @@
             </ul>
         </nav>
         <i id="cart-icon" class="fas fa-shopping-cart"></i>
-        <input type="text" id="search-input" placeholder="Buscar productos..." />
+       
     </header>
-
+ <input type="text" id="search-input" placeholder="Buscar productos..." />
     <main id="main">
     
         <div id="productos-container"></div>
@@ -34,12 +34,12 @@
                 <button id="clear-cart">Vaciar Carrito</button>
                 <button id="buy-now">Comprar</button>
             </div>
-            <!-- Contenedor de mensaje de compra -->
+
             <div id="message-container" style="display: none; position: fixed; top: 20px; right: 20px; background-color: #fff; color: #000; padding: 10px; border: 1px solid #ddd; border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); z-index: 1000;">
                 <p id="message-text"></p>
                 <button id="message-close">Cerrar</button>
-  </div>
-  
+</div>
+
         </div>
     </main>
 
